# glycin-ng

./: CHANGELOG.md  Cargo.toml  PKGBUILD  README.md  cliff.toml  deny.toml
.github/workflows/: deny.yml  release.yml
examples/: c_load.c
fuzz/fuzz_targets/: bmp_decode.rs  dds_decode.rs  exr_decode.rs  gif_decode.rs  ico_decode.rs  jpeg_decode.rs  jxl_decode.rs  png_decode.rs  pnm_decode.rs  qoi_decode.rs  sniff.rs  tga_decode.rs  tiff_decode.rs  webp_decode.rs
include/: glycin_ng.h
libglycin-shim/: Cargo.toml  README.md
libglycin-shim/src/: asyncops.rs  cicp.rs  convert.rs  ffi.rs  gtypes.rs  lib.rs  memformat.rs  mime.rs  mimelist.rs  svg.rs  types.rs
pixbuf-loader/: Cargo.toml  README.md
pixbuf-loader/src/: convert.rs  ffi.rs  lib.rs
pkgconfig/: glycin-2.pc.in  glycin-ng.pc.in
src/: c_api.rs  error.rs  image.rs  lib.rs  limits.rs  loader.rs  memory.rs  sniff.rs
src/formats/: bmp.rs  dds.rs  exr.rs  gif.rs  ico.rs  image_rs.rs  jpeg.rs  jxl.rs  mod.rs  png.rs  pnm.rs  qoi.rs  svg.rs  tga.rs  tiff.rs  webp.rs
src/metadata/: exif.rs  mod.rs  transform.rs
src/sandbox/: landlock.rs  mod.rs  rlimit.rs  seccomp.rs
tests/: c_api.rs  header_compiles.rs  multi_format.rs  orientation.rs  png_integration.rs
