[package]
name = "glycin-ng"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Permissively-licensed Rust image decoder library with in-process sandboxing"
keywords = ["decoder", "image", "landlock", "sandbox", "seccomp"]
categories = ["encoding", "multimedia::images"]

[workspace]
members = [".", "libglycin-shim", "pixbuf-loader"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "glycin_ng"
path = "src/lib.rs"

[[bench]]
harness = false
name = "decode"
required-features = ["png", "qoi"]

[[bench]]
harness = false
name = "sandbox_overhead"

[dependencies]
base64 = { version = "0.22.1", optional = true }
quick-xml = { version = "0.40.1", optional = true }
thiserror = "2"

[dependencies.gif]
version = "0.14"
optional = true

[dependencies.image]
version = "0.25"
default-features = false
features = ["bmp", "dds", "ico", "pnm", "tga"]
optional = true

[dependencies.image-webp]
version = "0.2"
optional = true

[dependencies.jpeg-decoder]
version = "0.3"
optional = true

[dependencies.jxl-oxide]
version = "0.12"
optional = true

[dependencies.png]
version = "0.18"
optional = true

[dependencies.qoi]
version = "0.4"
optional = true

[dependencies.resvg]
version = "0.47"
default-features = false
optional = true

[dependencies.tiff]
version = "0.11"
optional = true

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
gif = "0.14"
png = "0.18"
qoi = "0.4"
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = { version = "0.4", optional = true }
libc = "0.2"
seccompiler = { version = "0.5", optional = true }

[features]
default = [
  "bmp",
  "dds",
  "decode",
  "exr",
  "gif",
  "ico",
  "jpeg",
  "jxl",
  "landlock",
  "metadata",
  "png",
  "pnm",
  "qoi",
  "seccomp",
  "svg",
  "tga",
  "tiff",
  "webp",
]

decode = []
encode = []
metadata = []

landlock = ["dep:landlock"]
seccomp = ["dep:seccompiler"]

c-api = []

bmp = ["dep:image"]
dds = ["dep:image"]
exr = ["dep:image", "image/exr"]
gif = ["dep:gif"]
ico = ["dep:image"]
jpeg = ["dep:jpeg-decoder"]
jxl = ["dep:jxl-oxide"]
png = ["dep:png"]
pnm = ["dep:image"]
qoi = ["dep:qoi"]
svg = ["dep:resvg", "dep:base64", "dep:quick-xml"]
tga = ["dep:image"]
tiff = ["dep:tiff"]
webp = ["dep:image-webp"]

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"
codegen-units = 1
