[package]
name = "glycin-ng-libglycin-shim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "libglycin-2.so.0 compat shim that forwards to glycin-ng"
publish = false

[lib]
crate-type = ["cdylib"]
name = "glycin_2"
path = "src/lib.rs"

[dependencies]
bitflags = "2.11.1"
libc = "0.2"

[dependencies.image]
version = "0.25"
default-features = false
features = [
  "bmp",
  "gif",
  "jpeg",
  "png",
  "tiff",
  "webp",
]

[dependencies.glycin-ng]
path = ".."
default-features = false
features = [
  "bmp",
  "dds",
  "decode",
  "exr",
  "gif",
  "ico",
  "jpeg",
  "jxl",
  "landlock",
  "metadata",
  "png",
  "pnm",
  "qoi",
  "seccomp",
  "svg",
  "tga",
  "tiff",
  "webp",
]
