[package]
name = "glycin-ng-libglycin-shim"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "libglycin-2.so.0 compat shim that forwards to libglycin_ng.so"
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]
name = "glycin_2"
path = "src/lib.rs"

[dependencies]
bitflags = "2.11.1"
libc = "0.2"
