[package]
name = "glycin-ng-pixbuf-loader"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
description = "gdk-pixbuf loader module backed by glycin-ng"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]
name = "pixbufloader_glycin_ng"
path = "src/lib.rs"

[dependencies]
libc = "0.2"

[dependencies.glycin-ng]
path = ".."
default-features = false
features = [
  "bmp",
  "dds",
  "decode",
  "exr",
  "gif",
  "ico",
  "jpeg",
  "jxl",
  "landlock",
  "metadata",
  "png",
  "pnm",
  "qoi",
  "seccomp",
  "svg",
  "tga",
  "tiff",
  "webp",
]
