[package]
name = "glycin-ng-pixbuf-loader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "gdk-pixbuf loader module backed by glycin-ng"
publish = false

[lib]
crate-type = ["cdylib"]
name = "pixbufloader_glycin_ng"
path = "src/lib.rs"

[dependencies]
libc = "0.2"

[dependencies.glycin-ng]
path = ".."
default-features = false
features = [
  "bmp",
  "dds",
  "decode",
  "exr",
  "gif",
  "ico",
  "jpeg",
  "jxl",
  "landlock",
  "metadata",
  "png",
  "pnm",
  "qoi",
  "seccomp",
  "svg",
  "tga",
  "tiff",
  "webp",
]
